# dataviewer

./: Cargo.toml  README.md
examples/: multi.dv.toml  speedtest.dv.toml  speedtest.sh  xy.dv.toml  xy.plot  xy2.plot
src/: canvas.rs  dataview.rs  dataviewer.rs  main.rs  server.rs  stream.rs  ui.rs  utils.rs  viewer.rs
src/chart/: chart.rs  mod.rs  xy.rs
