[package]
name = "dataviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = { version ="0.7.1", features = [] }
eyre = "0.6.8"
serde = { version = "1.0.158", features = ["derive"] }
toml = "0.7.3"
