[package]
name = "dataviewer"
version = "0.1.4"
edition = "2021"
description = "Watch and view your data in real-time"
readme = "README.md"
repository = "https://github.com/guillaumepellegrino/dataviewer"
license = "GPL-3.0-or-later"
authors = ["Guillaume Pellegrino <guillaume.pellegrino@yahoo.com>"]
keywords = ["gtk", "data", "viewer", "plot"]
categories = ["visualization"]

[dependencies]
png = "0.9.0"
cairo-rs = { version = "0.18.0", features = ["png"] }
gtk4 = { version ="0.7.1", features = [] }
eyre = "0.6.8"
serde = { version = "1.0.158", features = ["derive"] }
toml = "0.7.3"
daemonize = "0.5.0"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true
